basic webpage and tutorial functionality

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,4 +1,14 @@
-{% extends 'layout.html' %}
+{% extends "layout.html" %}
 
 {% block content %}
+<div>
+
+</div>
+<div>
+  Welcome to ShotClass 
+  <br>
+  <a href="/shot/0">
+    <button class="btn btn-primary"">Begin Tutorial</button>
+  </a>
+</div>
 {% endblock %}
