added pictures to the lesson

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -8,7 +8,7 @@
   Welcome to ShotClass 
   <br>
   <a href="/shot/0">
-    <button class="btn btn-primary"">Begin Tutorial</button>
+    <button class="btn btn-primary">Begin Tutorial</button>
   </a>
 </div>
 {% endblock %}
