--- a/templates/shot.html
+++ b/templates/shot.html
@@ -1,15 +1,12 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<div>
-
-</div>
-<div>
- <h1>{{data.name}}</h1>
- <img src="{{data.picture}}"  alt="{{data.name}}">
- <h1>{{data.description}}</h1>
+<div class="content">
+ <h1>{{data.name}}</h1> <br>
+ <img src="{{ url_for('static', filename='shot'+ data.id|string +'.png')}}" alt="data.name" width="1000px"> <br>
+ <h3>{{data.description}}</h3> <br>
  <a href="/shot/{{data.id}}">
-    <button class="editbutton">Next</button>
+    <button class="btn btn-primary">Next</button>
  </a>
 </div>
 {% endblock %}
