--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -5,10 +5,13 @@
 
 </div>
 <div>
-  Welcome to ShotClass 
+  Welcome to ShotClass!
   <br>
   <a href="/shot/0">
-    <button class="btn btn-primary"">Begin Tutorial</button>
+    <button class="btn btn-primary">Begin Tutorial</button>
+  </a>
+  <a href="/quiz/home">
+    <button class="btn btn-primary">Quiz Yourself</button>
   </a>
 </div>
 {% endblock %}
