--- a/static/main.css
+++ b/static/main.css
@@ -2,3 +2,110 @@ html {
   display: table;
   margin: auto;
 }
+
+body {
+  background-image: url("home.png");
+  background-repeat:no-repeat;
+    background-attachment:fixed;
+    background-position:center;
+}
+
+.title {
+  top: 30%;
+  left: 37%;
+  display: block;
+  position: absolute;
+}
+
+.limelight-regular {
+  font-family: "Limelight", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+h1 {
+  font-size: 130px;
+  color: rgb(178, 55, 30);
+  margin-bottom: 0;
+}
+
+.start {
+  top: 93%;
+  left: 38%;
+  display: block;
+  position: absolute;
+}
+
+a {
+  text-decoration: none;
+}
+
+
+
+/* CSS for fancy button */
+.button-86 {
+  all: unset;
+  width: 275px;
+  height: 30px;
+  font-size: 50px;
+  background: transparent;
+  border: none;
+  position: relative;
+  color: #f0f0f0;
+  cursor: pointer;
+  z-index: 1;
+  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-86::after,
+.button-86::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -99999;
+  transition: all .4s;
+}
+
+.button-86::before {
+  transform: translate(0%, 0%);
+  width: 100%;
+  height: 100%;
+  background: #28282d;
+  border-radius: 10px;
+}
+
+.button-86::after {
+  transform: translate(10px, 10px);
+  width: 35px;
+  height: 35px;
+  background: #ffffff15;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border-radius: 50px;
+}
+
+.button-86:hover::before {
+  transform: translate(5%, 20%);
+  width: 110%;
+  height: 110%;
+}
+
+.button-86:hover::after {
+  border-radius: 10px;
+  transform: translate(0, 0);
+  width: 100%;
+  height: 100%;
+}
+
+.button-86:active::after {
+  transition: 0s;
+  transform: translate(0, 5%);
+}
