--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,6 +10,11 @@
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}" />
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Limelight&family=Style+Script&display=swap" rel="stylesheet">
+
         {% block head %}
         {% endblock %}
     </head>
