--- a/static/main.css
+++ b/static/main.css
@@ -3,7 +3,7 @@ html {
   margin: auto;
 }
 
-.body-home {
+body {
   background-image: url("home.png");
   background-repeat:no-repeat;
     background-attachment:fixed;
