--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,16 +1,14 @@
 {% extends "layout.html" %}
 
 {% block content %}
+<div>
 
-<div class="title limelight-regular">
-  <h1>&nbsp;Shot</h1>
-  <h1>Class</h1>
 </div>
-
-<div class="start">
+<div>
+  Welcome to ShotClass 
+  <br>
   <a href="/shot/0">
-    <button class="button-86" role="button">Begin Tutorial</button>
+    <button class="btn btn-primary">Begin Tutorial</button>
   </a>
 </div>
-
 {% endblock %}
