everything up to date

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,17 +1,16 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<div>
+<body class="body-home">
+<div class="title limelight-regular">
+  <h1>&nbsp;Shot</h1>
+  <h1>Class</h1>
+</div>
 
-</div>
-<div>
-  Welcome to ShotClass!
-  <br>
+<div class="start">
   <a href="/shot/0">
-    <button class="btn btn-primary">Begin Tutorial</button>
-  </a>
-  <a href="/quiz/home">
-    <button class="btn btn-primary">Quiz Yourself</button>
+    <button class="button-86" role="button">Begin Tutorial</button>
   </a>
 </div>
+</body>
 {% endblock %}
