--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,7 @@
   </script>
   
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav id='shotclass-nav' class="navbar navbar-expand-lg navbar-light">
         <div class="container">
           <a class="navbar-brand" id='home-title' href="/">ShotClass</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,8 +32,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" href="/shot/0">Learn</a>
-              <a class="nav-link" href="/quiz/home">Quiz</a>
+              <a id='learn-nav' class="nav-link" href="/shot/0">Learn</a>
+              <a id='quiz-nav' class="nav-link" href="/quiz/home">Quiz</a>
             </div>
           </div>
         </div>
