--- a/templates/quiz_home.html
+++ b/templates/quiz_home.html
@@ -9,34 +9,66 @@
     console.log(id)
 </script>
 <div>
-  Overview of the different shots:
+  <div id='overview-title'>Overview of the different shots:</div>
   <br>
   <div class="container">
     <div class="row">
-        <div class="col-4">
+        <div class="col-3">
             <a href="/shot/0">
                 <img id="shot0" src="https://s.studiobinder.com/wp-content/uploads/2020/12/Full-Metal-Jacket-Full-Shot-example.jpg.webp?resolution=1600,1.7999999523162842" 
                 alt-text="Two men in a bathroom cleaning the floor with mops with the frame of the scene spanning from floor to ceiling showing the men from head to toe.">
             </a>
-            Full Shot
+            <div id='quizhome-shot'>Full Shot (FS)</div>
         </div>
-        <div class="col-4">
-            <a href="/shot/0">
+        <div class="col-3">
+            <a href="/shot/1">
                 <img id="shot0" src="https://s.studiobinder.com/wp-content/uploads/2020/12/Full-Metal-Jacket-Full-Shot-example.jpg.webp?resolution=1600,1.7999999523162842" 
                 alt-text="Two men in a bathroom cleaning the floor with mops with the frame of the scene spanning from floor to ceiling showing the men from head to toe.">
             </a>
-            Medium Shot
+            <div id='quizhome-shot'>Medium Full Shot (MFS)</div>
         </div>
-        <div class="col-4">
-            <a href="/shot/0">
+        <div class="col-3">
+            <a href="/shot/2">
                 <img id="shot0" src="https://s.studiobinder.com/wp-content/uploads/2020/12/Full-Metal-Jacket-Full-Shot-example.jpg.webp?resolution=1600,1.7999999523162842" 
                 alt-text="Two men in a bathroom cleaning the floor with mops with the frame of the scene spanning from floor to ceiling showing the men from head to toe.">
             </a>
-            Cowboy Shot
+            <div id='quizhome-shot'>Cowboy Shot (CS)</div>
+        </div>
+        <div class="col-3">
+            <a href="/shot/2">
+                <img id="shot0" src="https://s.studiobinder.com/wp-content/uploads/2020/12/Full-Metal-Jacket-Full-Shot-example.jpg.webp?resolution=1600,1.7999999523162842" 
+                alt-text="Two men in a bathroom cleaning the floor with mops with the frame of the scene spanning from floor to ceiling showing the men from head to toe.">
+            </a>
+            <div id='quizhome-shot'>Medium Shot (MS)</div>
+        </div>
+      </div></br>
+      <div class="row">
+        <div class="col-3 offset-1">
+            <a href="/shot/2">
+                <img id="shot0" src="https://s.studiobinder.com/wp-content/uploads/2020/12/Full-Metal-Jacket-Full-Shot-example.jpg.webp?resolution=1600,1.7999999523162842" 
+                alt-text="Two men in a bathroom cleaning the floor with mops with the frame of the scene spanning from floor to ceiling showing the men from head to toe.">
+            </a>
+            <div id='quizhome-shot'>Medium Close Up (MCU)</div>
+        </div>
+        <div class="col-3">
+            <a href="/shot/2">
+                <img id="shot0" src="https://s.studiobinder.com/wp-content/uploads/2020/12/Full-Metal-Jacket-Full-Shot-example.jpg.webp?resolution=1600,1.7999999523162842" 
+                alt-text="Two men in a bathroom cleaning the floor with mops with the frame of the scene spanning from floor to ceiling showing the men from head to toe.">
+            </a>
+            <div id='quizhome-shot'>Close Up (CU)</div>
+        </div>
+        <div class="col-3">
+            <a href="/shot/2">
+                <img id="shot0" src="https://s.studiobinder.com/wp-content/uploads/2020/12/Full-Metal-Jacket-Full-Shot-example.jpg.webp?resolution=1600,1.7999999523162842" 
+                alt-text="Two men in a bathroom cleaning the floor with mops with the frame of the scene spanning from floor to ceiling showing the men from head to toe.">
+            </a>
+            <div id='quizhome-shot'>Extreme Close Up (ECU)</div>
         </div>
       </div>
       <div class="row">
-        <div id="quiz-btn"></div>
+        <div class="offset-11">
+            <a href='/quiz/1'><button id='quiz-btn' class="btn">To Quiz</button></a>
+        </div>
       </div>
   </div>
 </div>
