--- a/templates/quiz_home.html
+++ b/templates/quiz_home.html
@@ -8,8 +8,12 @@
     let id = home_data["id"]
     console.log(id)
 </script>
-<div>
+<div id="background-container"><br>
   <div id='overview-title'>Overview of the different shots:</div>
+  <div id="overview-desc">
+    These are all the shots we've covered are shown below in order. <br>
+    Feel free to click on the image if you need to review each shot in more depth.
+  </div>
   <br>
   <div class="container">
     <div class="row">
@@ -22,45 +26,46 @@
         </div>
         <div class="col-3">
             <a href="/shot/1">
-                <img id="shot0" src="https://s.studiobinder.com/wp-content/uploads/2020/12/Full-Metal-Jacket-Full-Shot-example.jpg.webp?resolution=1600,1.7999999523162842" 
-                alt-text="Two men in a bathroom cleaning the floor with mops with the frame of the scene spanning from floor to ceiling showing the men from head to toe.">
+                <img id="shot0" src="https://images.ctfassets.net/bht415zek091/3Th2k3ze6mjDH9KKbaR9fn/33c490d0b730f0df28d704d07f701559/examplemediumwideshot-web.jpg" 
+                alt-text="A woman stands on a walkway next to the East River in New York City, and the backgrund is the Financial District. She stares off into the distance 
+                with her hands in her pocket. The camera frames her from head to below her knees but above her toes.">
             </a>
             <div id='quizhome-shot'>Medium Full Shot (MFS)</div>
         </div>
         <div class="col-3">
             <a href="/shot/2">
-                <img id="shot0" src="https://s.studiobinder.com/wp-content/uploads/2020/12/Full-Metal-Jacket-Full-Shot-example.jpg.webp?resolution=1600,1.7999999523162842" 
-                alt-text="Two men in a bathroom cleaning the floor with mops with the frame of the scene spanning from floor to ceiling showing the men from head to toe.">
+                <img id="shot0" src="https://cc-prod.scene7.com/is/image/CCProdAuthor/cowboy-shot_p6_720x405?$pjpeg$&jpegSize=200&wid=720" 
+                alt-text="A man stands in the focus of the frame, staring off into the distance. He is wearing a suit. The camera frames him from head to the middle of his thighs.">
             </a>
             <div id='quizhome-shot'>Cowboy Shot (CS)</div>
         </div>
         <div class="col-3">
-            <a href="/shot/2">
-                <img id="shot0" src="https://s.studiobinder.com/wp-content/uploads/2020/12/Full-Metal-Jacket-Full-Shot-example.jpg.webp?resolution=1600,1.7999999523162842" 
-                alt-text="Two men in a bathroom cleaning the floor with mops with the frame of the scene spanning from floor to ceiling showing the men from head to toe.">
+            <a href="/shot/3">
+                <img id="shot0" src="https://static.bhphotovideo.com/explora/explora/sites/default/files/medium-shot.jpg" 
+                alt-text="A child stands in the middle of the frame, throwing yellow leaves into the air. She is framed from head to around the waist.">
             </a>
             <div id='quizhome-shot'>Medium Shot (MS)</div>
         </div>
       </div></br>
       <div class="row">
         <div class="col-3 offset-1">
-            <a href="/shot/2">
-                <img id="shot0" src="https://s.studiobinder.com/wp-content/uploads/2020/12/Full-Metal-Jacket-Full-Shot-example.jpg.webp?resolution=1600,1.7999999523162842" 
-                alt-text="Two men in a bathroom cleaning the floor with mops with the frame of the scene spanning from floor to ceiling showing the men from head to toe.">
+            <a href="/shot/4">
+                <img id="shot0" src="https://d26oc3sg82pgk3.cloudfront.net/files/media/edit/image/47048/original.jpg" 
+                alt-text="A Black man stares into the camera, crying. He is framed from his shoulders up.">
             </a>
             <div id='quizhome-shot'>Medium Close Up (MCU)</div>
         </div>
         <div class="col-3">
-            <a href="/shot/2">
-                <img id="shot0" src="https://s.studiobinder.com/wp-content/uploads/2020/12/Full-Metal-Jacket-Full-Shot-example.jpg.webp?resolution=1600,1.7999999523162842" 
-                alt-text="Two men in a bathroom cleaning the floor with mops with the frame of the scene spanning from floor to ceiling showing the men from head to toe.">
+            <a href="/shot/5">
+                <img id="shot0" src="https://www.soundstripe.com/hubfs/Everything-You-Need-to-Know-About-Close-Up-Shots.jpg#keepProtocol" 
+                alt-text="An Asian man stares into the space behind the camera, harrowed. The camera frames his entire face.">
             </a>
             <div id='quizhome-shot'>Close Up (CU)</div>
         </div>
         <div class="col-3">
-            <a href="/shot/2">
-                <img id="shot0" src="https://s.studiobinder.com/wp-content/uploads/2020/12/Full-Metal-Jacket-Full-Shot-example.jpg.webp?resolution=1600,1.7999999523162842" 
-                alt-text="Two men in a bathroom cleaning the floor with mops with the frame of the scene spanning from floor to ceiling showing the men from head to toe.">
+            <a href="/shot/6">
+                <img id="shot0" src="https://assets.videomaker.com/2012/11/CloseupEnews.jpg" 
+                alt-text="An eye stares into the camera, with leaves surrounding it. The camera frames only a part of the face.">
             </a>
             <div id='quizhome-shot'>Extreme Close Up (ECU)</div>
         </div>
