--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,8 +23,9 @@
   <script>
   </script>
   
-  <body>
-    <nav id='shotclass-nav' class="navbar navbar-expand-lg navbar-light">
+  <body id="background">
+    <div class="row">
+      <nav id='shotclass-nav' class="navbar navbar-expand-lg navbar-light">
         <div class="container">
           <a class="navbar-brand" id='home-title' href="/">ShotClass</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +38,8 @@
             </div>
           </div>
         </div>
-    </nav>
+      </nav>
+    </div>
 
     <div class="container">   
         {% block content %}
