--- a/templates/congrats.html
+++ b/templates/congrats.html
@@ -2,8 +2,15 @@
 
 {% block content %}
 <div class="text-center m-4">
-    <h1>Congratulations! Your score is {{ score }}/{{ max_score }}</h1>
-    <p>You now have a working knowledge of the basic shot types.</p>
+    <h1>Congratulations!</h1>
+    <h1>Your score is <b>{{ score }}/{{ max_score }}</b></h1>
+    <div class="ruby p-1 mt-5 mb-3">
+        <h3 class="text-white">Learning Outcomes</h3>
+    </div>
+    <p class="mb-3">You now have a working knowledge of the basic shot types.</p>
+    <div class="ruby p-1 mt-5 mb-3">
+        <h3 class="text-white">Next Steps</h3>
+    </div>
     <p>Consider researching framing specifics like nose room and head room.</p>
     <p>You can also learn more about when to use each shot type.</p>
     <p>Finally, get filming or critiquing!</p>
