--- a/static/main.css
+++ b/static/main.css
@@ -96,9 +96,24 @@ a:hover {
     color: #484848;
 }
 
+#img-row{
+    display: flex;
+    justify-content: center;
+}
+
+#clarification {
+    font-family: "Limelight"
+}
+
 #quiz-btn {
     background-color: rgb(178, 55, 30);
     color: white;
+}
+
+#quiz-img {
+    max-width: 50%;
+    max-height: 50%;
+    align-self: center;
 }
 
 #qstn-title {
@@ -121,6 +136,7 @@ a:hover {
     color: white;
     font-size: 15px;
     padding-left: 0px;
+    width: 100%;
 }
 
 #ans-ecu {
@@ -130,6 +146,7 @@ a:hover {
 .btn {
     background-color: rgb(178, 55, 30);
     color: white;
+    font-family: "Limelight";
 }
 
 
