--- a/templates/quiz_questions.html
+++ b/templates/quiz_questions.html
@@ -15,41 +15,41 @@
   <div class="row">
     <div id="question"></div>
   </div>
+  <div class="row">
+    <div id="clarification"></div>
+  </div><br>
   <div class="row" id="ans-buttons">
-    <div class="col-3">
+    <div class="col-2 offset-1">
       <button id='ans-fs' class="btn">Full Shot</button>
     </div>
-    <div class="col-5">
+    <div class="col-3">
       <button id='ans-mfs' class="btn">Medium Full Shot</button>
     </div>
-    <div class="col-4">
+    <div class="col-3">
       <button id='ans-cs' class="btn">Cowboy Shot</button>
     </div>
-  </div><br>
-  <div class="row" id="ans-buttons">
-    <div class="col-4">
+    <div class="col-3">
       <button id='ans-ms' class="btn">Medium Shot</button>
     </div>
-    <div class="col-4">
-      <button id='ans-mcu' class="btn">Medium Close Up</button>
-    </div>
-    <div class="col-4">
-      <button id='ans-cu' class="btn">Close Up</button>
-    </div>
   </div><br>
   <div class="row" id="ans-buttons">
-    <div class="col-4">
+    <div class="col-3 offset-2">
+      <button id='ans-mcu' class="btn">Medium Close Up</button>
+    </div>
+    <div class="col-3">
+      <button id='ans-cu' class="btn">Close Up</button>
+    </div>
+    <div class="col-3">
       <button id='ans-ecu' class="btn">Extreme Close Up</button>
     </div>
   </div><br>
   <div class="row">
-      <div id="clarification"></div>
-  </div>
-  <div class="row">
+    <div class="col-1">
       <div id="quiz-btn-back"></div>
-      <div class="col-3 offset-10">
-        <div class="btn" id="quiz-btn-forward"></div>
-      </div>
+    </div>
+    <div class="col-1 offset-10">
+      <div id="quiz-btn-forward"></div>
+    </div>
   </div>
 </body>
   
