--- a/templates/draw.html
+++ b/templates/draw.html
@@ -17,7 +17,7 @@
     <div id="canvas-wrapper" class="mx-auto mb-2 w-75">
         <canvas id="canvas"></canvas>
     </div>
-    <button id="submit-button" class="btn btn-primary" disabled>Submit</button>
-    <a id="next-button" class="btn btn-primary" href="{{ next_page_route }}" hidden>{{ next_button_text }}</a>
+    <button id="submit-button" class="btn" disabled>Submit</button>
+    <a id="next-button" class="btn" href="{{ next_page_route }}" hidden>{{ next_button_text }}</a>
 </div>
 {% endblock %}
