--- a/templates/shot.html
+++ b/templates/shot.html
@@ -16,10 +16,10 @@
  <br>
 
  <a href="/shot/{{data.id - 2}}">
-   <button class="btn btn-primary">Prev</button>
+   <button class="btn">Prev</button>
  </a>
  <a href="/shot/{{data.id}}">
-    <button class="btn btn-primary">Next</button>
+    <button class="btn">Next</button>
  </a>
 </div>
 {% endblock %}
