--- a/templates/quiz_questions.html
+++ b/templates/quiz_questions.html
@@ -18,30 +18,14 @@
   <div class="row">
     <div id="clarification"></div>
   </div><br>
-  <div class="row" id="ans-buttons">
-    <div class="col-2 offset-1">
-      <button id='ans-fs' class="btn">Full Shot</button>
-    </div>
-    <div class="col-3">
-      <button id='ans-mfs' class="btn">Medium Full Shot</button>
-    </div>
-    <div class="col-3">
-      <button id='ans-cs' class="btn">Cowboy Shot</button>
-    </div>
-    <div class="col-3">
-      <button id='ans-ms' class="btn">Medium Shot</button>
-    </div>
-  </div><br>
-  <div class="row" id="ans-buttons">
-    <div class="col-3 offset-2">
-      <button id='ans-mcu' class="btn">Medium Close Up</button>
-    </div>
-    <div class="col-3">
-      <button id='ans-cu' class="btn">Close Up</button>
-    </div>
-    <div class="col-3">
-      <button id='ans-ecu' class="btn">Extreme Close Up</button>
-    </div>
+  <div class="continaer" id="quiz-options">
+    <button id='ans-fs' class="btn">Full Shot</button>
+    <button id='ans-mfs' class="btn">Medium Full Shot</button>
+    <button id='ans-cs' class="btn">Cowboy Shot</button>
+    <button id='ans-ms' class="btn">Medium Shot</button>
+    <button id='ans-mcu' class="btn">Medium Close Up</button>
+    <button id='ans-cu' class="btn">Close Up</button>
+    <button id='ans-ecu' class="btn">Extreme Close Up</button>
   </div><br>
   <div class="row">
     <div class="col-1">
