--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -2,12 +2,13 @@
 
 {% block content %}
 <body class="body-home">
-<div class="title limelight-regular">
-  <h1>&nbsp;Shot</h1>
-  <h1>Class</h1>
+<div class="description limelight-regular">
+  <p>Interested in making or analyzing films?
+The first step is being familiar with the types of shots you'd find in a script. <br>
+Click the button below to learn how to identify and frame shots in film!
+</p>
 </div>
-
-<div class="start">
+<div class="start limelight-regular">
   <a href="/shot/0">
     <button class="button-86" role="button">Begin Tutorial</button>
   </a>
